<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutHomepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayoutHomepage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/contactSearchBar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:background="#F7F6FC"
            android:dropDownHeight="wrap_content"
            android:hint="@string/search"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/search_button"
            android:elevation="1dp"
            android:scaleType="centerInside"
            android:src="@drawable/search"
            android:textAlignment="center" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayoutHomepage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogOut"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutHomepage">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#985eff"
        android:fontFamily="@font/roboto"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/log_out"
        android:textAllCaps="false"
        app:cornerRadius="0dp"
        app:iconTint="#985eff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#985eff" />

</androidx.constraintlayout.widget.ConstraintLayout>
