<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutChat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background">

    <LinearLayout
        android:id="@+id/headerContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/background"
        android:backgroundTint="#F7F6FC"
        app:layout_constraintBottom_toTopOf="@id/recyclerViewMessages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto"
            android:text="@string/back"
            android:textColor="#5428E7" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/default_text_view"
            android:textColor="#5428E7"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/emptyCardView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:backgroundTint="#F7F6FC"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutMessageInput"
        app:layout_constraintTop_toBottomOf="@id/headerContact">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutMessageInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#985eff"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewMessages">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnSend"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/inputMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/type_message"
                android:background="#FFFFFF"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/type_message"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/send_button"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/plane"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/frameLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>